2016-02-12  Mark Wielaard  <mjw@redhat.com>

	* aarch64_corenote.c (aarch64_syscall_items): New Ebl_Core_Item[].
	(EXTRA_NOTES): Add NT_ARM_SYSTEM_CALL.
	* eblcorenotetypename.c (ebl_core_note_type_name):
	Add ARM_SYSTEM_CALL.

2015-12-08  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* sparc_init.c (sparc_init): Hook sparc_set_initial_registers_tid.
	* sparc_initreg.c: New file.
	* Makefile.am (sparc_SRCS): Added sparc_initreg.c.

2015-12-08  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* sparc_corenote.c: Header comment typo fixed.
	(PRSTATUS_REGSET_ITEMS): Defined, so the PC can be fetched from
	core files.
	* Makefile.am (sparc_SRCS): Added sparc_cfi.c
	* sparc_cfi.c: New file.
	* sparc_init.c (sparc_init): Set eh->frame_nregs, eh->ra_offset
	and hook sparc_abi_cfi.

2015-10-21  Chih-Hung Hsieh  <chh@google.com>

	* ia64_retval.c (hfa_type): Move nested function 'hfa' to file scope.
	* aarch64_regs.c (aarch64_register_info): Move nested function 'regtype'
	to file scope.

2015-10-16  Mark Wielaard  <mjw@redhat.com>

	* ppc_symbol.c (ppc_check_special_symbol): Also allow _SDA_BASE_
	in .data section.

2015-10-05  Josh Stone  <jistone@redhat.com>

	* Makefile.am (libebl_%.so): Add AM_V_at and AM_V_CCLD silencers.

2015-10-06  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* sparc_attrs.c: New file.
	* Makefile.am (sparc_SRCS): Added sparc_attrs.c
	* sparc_init.c (sparc_init): Hook sparc_check_object_attribute.

2015-10-02  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* sparc_init.c (RELOC_TYPE_ID): Defined.
	* common-reloc.c (reloc_type_name): Apply target-specific
	relocation ID extractors if defined.
	(reloc_type_check): Likewise.
	(reloc_valid_use): Likewise.

2015-10-02  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* sparc_reloc.def: Added relocation types WDISP10, JMP_IREL and
	IRELATIVE.

2015-09-22  Mark Wielaard  <mjw@redhat.com>

	* arm_attrs.c: Remove old-style function definitions.
	* linux-core-note.c: Likewise.
	* ppc_attrs.c: Likewise.
