@@ -68,3 +68,4 @@ RELOC_TYPE (TLS_GOTDESC,	REL)
 RELOC_TYPE (TLS_DESC_CALL,	REL)
 RELOC_TYPE (TLS_DESC,		EXEC)
 RELOC_TYPE (IRELATIVE,		EXEC|DYN)
+RELOC_TYPE (GOT32X,		REL)
