@@ -61,3 +61,5 @@ RELOC_TYPE (GOTPC32_TLSDESC, REL)
 RELOC_TYPE (TLSDESC_CALL, REL)
 RELOC_TYPE (TLSDESC,	REL|EXEC|DYN)
 RELOC_TYPE (IRELATIVE,	EXEC|DYN)
+RELOC_TYPE (GOTPCRELX,	REL)
+RELOC_TYPE (REX_GOTPCRELX, REL)
