@@ -1,3 +1,7 @@
+2016-01-28  Mark Wielaard  <mjw@redhat.com>
+
+	* elf.h: Update from glibc. Add new i386 and x86_64 relocations.
+
 2016-02-12  Mark Wielaard  <mjw@redhat.com>
 
 	* elf.h: Update from glibc. Add NT_ARM_SYSTEM_CALL.
